<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bps"
                android:layout_width="0px"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/bps"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/timesignature"
                android:layout_width="0px"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/bps"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/currentBeat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/one"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DACDECD6">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bps"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0C3A63" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMinusClick"
                android:text="@string/minus"

                android:textSize="30sp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPlusClick"
                android:text="@string/plus"

                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="#DACDECD6">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timesignature"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0C3A63" />

            <Spinner
                android:id="@+id/beatspinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#589bd6" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#0C3A63" />

            <Spinner
                android:id="@+id/notespinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#589bd6" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DACDECD6">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/volume"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0C3A63" />

            <SeekBar
                android:id="@+id/volumebar"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:progressTint="#F6F0F0"
                android:thumbTint="#AF2424" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/startstop"
                android:layout_width="match_parent"
                android:layout_height="458dp"
                android:backgroundTint="#EE0D5D81"
                android:onClick="onStartStopClick"
                android:text="@string/start"
                android:textSize="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="333dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:visibility="visible"
        app:itemBackground="@color/navigation"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />



</androidx.constraintlayout.widget.ConstraintLayout>